--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.25.0",
+    "@aptos-labs/wallet-adapter-ant-design": "^3.0.2",
     "@aptos-labs/wallet-adapter-react": "^3.5.2",
+    "@manahippo/aptos-wallet-adapter": "^1.0.10",
     "next": "14.2.5",
     "petra-plugin-wallet-adapter": "^0.4.5",
     "react": "^18",
