--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@aptos-labs/wallet-adapter-ant-design": "^3.0.2",
     "@aptos-labs/wallet-adapter-react": "^3.5.2",
     "@manahippo/aptos-wallet-adapter": "^1.0.10",
+    "@nightlylabs/aptos-wallet-adapter-plugin": "^0.2.12",
     "next": "14.2.5",
     "petra-plugin-wallet-adapter": "^0.4.5",
     "react": "^18",
